--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,18 +13,23 @@ dependencies:
     sdk: flutter
   google_fonts: ^2.3.1
   intl: ^0.17.0
-
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  flutter_launcher_icons: "^0.9.2"
   flutter_lints: ^1.0.0
 
+flutter_icons:
+  image_path: "assets/imagens/launch.png"
+  android: true
+  ios: true
+  
 flutter:
 
   uses-material-design: true
 
   assets:
     - assets/imagens/wait.png
+
